@@ -22,6 +22,7 @@ PostGIS 2.5.4
   - #4549, Fix schema qualification of internal types (Raúl Marín)
   - #4546, Fix PLPGSQL functions missing the schema qualification (Raúl Marín)
   - #4588, Fix update when st_union(geometry) doesn't exist (Raúl Marín)
+  - #4599, ST_AddPoint: Accept -1 as a valid position (Raúl Marín)
 
 
 PostGIS 2.5.3
